--- a/docs.html
+++ b/docs.html
@@ -36,7 +36,7 @@
     
     <div class="ui-body">
     <!-- 内容主体区域 -->
-    <iframe src="http://asdjkm.eicp.net:8964/samp/" width="100%" height="100%" scrolling="no" frameborder="0" framespacing="0"></iframe>
+    <iframe src="http://asdjkm.eicp.net:8964/samp/" width="100%" height="100%"></iframe>
     </div>
 	</body>
 </html>
